<resources>
    <string name="app_name" translatable="false">MicoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_settings">Settings</string>
    <string name="action_contact_us">Contact us</string>
    <string name="action_telegram">Telegram</string>
    <string name="action_email">E-mail</string>
    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_encyclopedia">Encyclopedia</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_memories">Memories</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_receive">Receive</string>
    <string name="menu_history">History</string>
    <string name="email_subject">Support for</string>
    <string name="email_text">English and Italian are the favorite languages, otherwise Google Translate will be used.\nDelete this part before send ;)</string>
    <string name="nickname">Nickname</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="user_information">User\'s information</string>
    <string name="drawer_on_back">Open Drawer on Back</string>
    <string name="drawer_on_back_desc_on">Using Back button will open the Drawer</string>
    <string name="drawer_on_back_desc_off">Using Back button will close app</string>
    <string name="behaviour">Behaviour</string>
    <string name="preference_drawer_on_back" translatable="false">preference_drawer_on_back</string>
    <string name="preference_nickname" translatable="false">preference_nickname</string>
    <string name="preference_name" translatable="false">preference_name</string>
    <string name="preference_surname" translatable="false">preference_surname</string>
    <string name="header_image_content">This is app icon</string>
    <string name="preference_drawer_open_onStart" translatable="false">preference_drawer_open_onStart</string>
    <string name="preference_exit_double_back" translatable="false">preference_exit_double_back</string>
    <string name="drawer_open_onStart_desc_on">Start app with Drawer already open</string>
    <string name="drawer_open_onStart_desc_off">Start app with Drawer closed (as usual)</string>
    <string name="drawer_open_onStart">Open drawer immediately</string>
    <string name="exit_double_back">Exit after second Back</string>
    <string name="exit_double_back_desc_on">First Back opens drawer, second one exits app</string>
    <string name="exit_double_back_desc_off">Back will open and close drawer in a sort of loop</string>
    <string name="db_populated">Database has been pre-populated.\nThis happens only after first run</string>
    <string name="archive_image_content">This is a photo of mushroom found</string>
    <string name="database">Database</string>
    <string name="delete_db">Delete Database</string>
    <string name="preference_delete_db" translatable="false">preference_delete_db</string>
    <string name="preference_delete_finds" translatable="false">preference_delete_finding</string>
    <string name="delete_finds">Delete all Finds</string>
    <string name="dialog_deleting_db">Pay attention!\nYou are deleting the whole Database.\nThis operation is undoable!</string>
    <string name="dialog_deleting_finds">Pay attention!\nYou are deleting all the Finds.\nThis operation is undoable!</string>
    <string name="undo">Undo</string>
    <string name="proceed">Proceed</string>
    <string name="success_operation">Operation executed successfully!</string>
    <string name="preference_delete_received" translatable="false">preference_delete_received</string>
    <string name="delete_received">Delete alla Received history</string>
    <string name="dialog_deleting_received">Pay attention!\nYou are deleting all the Received.\nThis operation is undoable!</string>
    <string name="action_github">GitHub</string>
    <string name="action_informations">Informations</string>
    <string name="tmp_github">GitHub repository is still private</string>
    <string name="received_on">Received on:</string>
    <string name="error_insert">An error occurred during insert of a new element in DB!</string>
    <string name="mushroom">Mushroom</string>
    <string name="quantity">Quantity</string>
    <string name="note">Note</string>
    <string name="edit_find">Edit Find</string>
    <string name="save">Save</string>
    <string name="info_open_source">This open source app was born in 2019 as a project for the course of Laboratorio di Applicazioni Mobili at University of Bologna, but the focus was to do something more than a simple and almost useless project for an exam.\n\nIf you like to search mushrooms like me this app could help you to keep a personal record of which moushrooms, where have you found them and eventually share these finds with your friends (I know how jealous is a searcher, so there is no possibility to share online your informations).</string>
    <string name="info_credits">Credits</string>
    <string name="permission_loc_explanation">Without Location Permission this app can not automatically detect your position.\nYou will have to select it manually</string>
    <string name="permission_loc_title">What is Location Permission for?</string>
    <string name="channel_permissions_name">Permissions</string>
    <string name="channel_permissions_desc">More info about permission requested by app</string>
    <string name="error_location">Unexpected error during location retrieving</string>
    <string name="dialog_credentials">Remember to set your nickname, name and surname in settings!</string>
    <string name="ok">@android:string/ok</string>
    <string name="error_generic">A generic error occurred…</string>
    <string name="error_missing_field">You\'re missing some field</string>
    <string name="action_mode_selected">selected items</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="error_date">Date or Time format is wrong</string>
    <string name="create_find">Edit Find</string>
    <string name="radio_insert">Insert</string>
    <string name="radio_mushroom">Mushroom</string>
    <string name="radio_date">Date</string>
    <string name="order_on">"Order on: "</string>
    <string name="date_autoSet">Date and Time will be automatically set based on save moment</string>
    <string name="received">Received</string>
    <string name="show_search">Show search field</string>
    <string name="search">Search</string>
    <string name="search_place">Search place</string>
    <string name="permission_stor_title">What is Storage Permission for?</string>
    <string name="permission_stor_explanation">Without Storage Permission this app can not export Finds as a file.\nYou will not have the possibility to export and share your Finds</string>
    <string name="error_storage_not_writable">Failure cause External Storage not writable!</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="error_file_creation_open">It is not possible to create or open the file</string>
    <string name="error_io">An error occurred during I/O operations!</string>
    <string name="error_storage_not_readable">Failure cause External Storage not readable!</string>
    <string name="receive_select">Select file</string>
    <string name="error_find_already_saved">This Find is already saved in database!</string>
    <string name="error_received_already_saved">This Received is already saved in database!</string>
    <string name="receive_description">Select a .micoapp file.\nWhen you export a Find its file will be saved in Downloads/MicoApp</string>
    <string name="error_import_fail">Find already there!</string>
    <string name="update_import">Find imported,\nReceived updated</string>
    <string name="tips">Tips</string>
    <string name="show_data_toast">Show Toast about date information</string>
    <string name="show_data_toast_desc_on">Show an explanation about date usage in Find creation view</string>
    <string name="show_data_toast_desc_off">In Find creation view date is disabled without explanation</string>
    <string name="preference_show_data_toast" translatable="false">preference_show_data_toast</string>
    <string name="show_map">Show map</string>
    <string name="copied_on_clipboard">Copied on clipboard</string>
    <string name="preference_link_encyclopedia" translatable="false">preference_link_encyclopedia</string>
    <string name="link_encyclopedia">Link Encyclopedia</string>
    <string name="action_save_link">Save link</string>
    <string name="link_will_be_saved">The current page will be reloaded next time</string>
    <string name="link_will_not_be_saved">Default page will be loaded next time</string>
    <string name="copy_url">Copy url</string>
    <string name="refresh">Refresh</string>
    <string name="remove_image">Remove image</string>
    <string name="mushroom_image">Mushroom image</string>
    <string name="take_photo">Take a photo</string>
    <string name="add_photo">Add a photo</string>
    <string name="dialog_recover_images">During last editing something has not been saved.\nDo you want to recover photos?</string>
    <string name="error_photos_undeleted">Be aware! Some photo in MicoApp folder is not been properly deleted</string>
    <string name="photo_path">Photos\' paths</string>
    <string name="remember_delete_photos">Remember to manually delete photos\' folder</string>
    <string name="finds">Finds</string>
    <string name="received_s">Received</string>
    <string name="photos">Photos</string>
    <string name="different_users">Different users</string>
    <string name="has_more_photos">Has more photos</string>
    <string name="has_more_quantity">Higher quantity</string>
    <string name="channel_memories_name">Memories</string>
    <string name="channel_memories_desc">To remember you about your previous finds</string>
    <string name="worker_state">Worker State:</string>
    <string name="worker_last_run">Worker last run:</string>
    <string name="worker_delete">Delete worker</string>
    <string name="never">Never</string>
    <string name="notif_mem_title">New Memories have been found</string>
    <string name="notif_mem_desc">Let\'s check them!</string>
    <string name="info_coIdeator_label">Co-Ideator:</string>
    <string name="info_coIdeator" translatable="false">Roberto Cocchi</string>
    <string name="info_technical_support_label">Technical support:</string>
    <string name="info_technical_support" translatable="false">Nicola Fava</string>
    <string name="info_designer_label">Designer:</string>
    <string name="info_designer" translatable="false">Agnese Testoni</string>
    <string name="info_main_tester_label">Main Tester:</string>
    <string name="info_main_tester" translatable="false">Agnese Testoni\nFrancesco Bellei\nNicola Fava\nRoberto Cocchi\nRubens Ferrari</string>
    <string name="info_channel">All the members of my Telegram channel</string>
    <string name="error_geocoder">Geocoder doesn\'t work properly and address should not be updated. Try edit, modify coords and save again</string>
    <string name="show_mushrooms">Show mushrooms</string>
</resources>
