<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/menu_encyclopedia"
            android:icon="@drawable/ic_menu_encyclopedia"
            android:title="@string/menu_encyclopedia" />
        <item
            android:id="@+id/menu_archive"
            android:icon="@drawable/ic_menu_archive"
            android:title="@string/menu_archive" />
        <item
            android:id="@+id/menu_memories"
            android:icon="@drawable/ic_menu_memories"
            android:title="@string/menu_memories" />
        <item
            android:id="@+id/menu_statistics"
            android:icon="@drawable/ic_menu_statistics"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/menu_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/menu_history"
                android:icon="@drawable/ic_menu_history"
                android:title="@string/menu_history" />
        </menu>
    </item>

</menu>
