<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:checkable="false"
        android:title="@string/action_contact_us"
        app:showAsAction="never" >
        <menu >
            <item
                android:id="@+id/action_telegram"
                android:icon="@drawable/ic_menu_telegram"
                android:title="@string/action_telegram" />
            <item
                android:id="@+id/action_email"
                android:icon="@drawable/ic_menu_email"
                android:title="@string/action_email" />
        </menu>
    </item>
    <item
        android:id="@+id/action_github"
        android:icon="@drawable/ic_github"
        android:title="@string/action_github" />
    <item
        android:id="@+id/action_informations"
        android:title="@string/action_informations" />
</menu>
