<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:activity=".HomeFragment">

    <TextView
        android:id="@+id/home_state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/worker_state"
        app:layout_constraintBottom_toBottomOf="@+id/home_state_textView"
        app:layout_constraintEnd_toStartOf="@+id/home_state_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/home_state_textView" />

    <TextView
        android:id="@+id/home_state_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/home_last_run_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/home_state_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="ENQUEUED" />

    <TextView
        android:id="@+id/home_last_run_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/worker_last_run"
        android:textAlignment="textEnd"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/home_last_run_textView"
        app:layout_constraintEnd_toEndOf="@+id/home_state_label"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_last_run_textView" />

    <TextView
        android:id="@+id/home_last_run_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/home_delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/home_state_textView"
        app:layout_constraintTop_toBottomOf="@+id/home_state_textView"
        tools:text="09/06/2019 12:00" />

    <Button
        android:id="@+id/home_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/worker_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_last_run_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>